# log-sentry-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: dashboard_state.json
scripts/: run_demo.py
src/: __init__.py  main.py
src/agent/: __init__.py  action_planner.py  prompts.py  react_agent.py
src/dashboard/: __init__.py  app.py
src/detection/: __init__.py  feature_extractor.py  log_parser.py  ml_detector.py  statistical_detector.py
src/remediation/: __init__.py  executor.py  guardrails.py
src/simulator/: __init__.py  fault_injector.py  log_generator.py  metrics_generator.py
tests/: __init__.py  test_agent.py  test_detection.py  test_feature_extractor.py  test_log_parser.py  test_ml_detector.py  test_remediation.py  test_simulator.py  test_statistical_detector.py
